# sonar

./: TODO.md
.aws/: Makefile  cdk.json  pyproject.toml
.aws/cdk.out/: manifest.json  sonar.assets.json  sonar.template.json  tree.json
.aws/cdk.out/asset.27aea6c4aac43fa6a05de0beca7f47ebfcc159187f9985a109ad288a731060c3/src/: models.py
.aws/cdk.out/asset.8a48251eb3ebd743e9c41932d2a417138559e6dcec5833913f0fa68541fd9d26/: Dockerfile
.aws/cdk.out/asset.8a48251eb3ebd743e9c41932d2a417138559e6dcec5833913f0fa68541fd9d26/src/: env.py
.aws/cdk.out/asset.e4790909e38051cf82aebf102cc3a9cef16d110aa7eeac73bc546e5f8d923393/: .gitignore
.aws/cdk.out/asset.fd0d37852395f955d46cf1480cd6d4893cede9b4194c30d5baeef8b1050d40b6/src/: main.py
.aws/src/: main.py
api/: pyproject.toml
api/src/: main.py  models.py  recommendations.py  spotify.py  spotify_unauthorized.py
ui/: .eslintrc.cjs  .gitignore  bun.lockb  deploy.sh  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
ui/src/: app.css  app.html
ui/src/lib/: api.ts  env.ts  index.ts  models.ts  previewPlayer.ts  tokenManager.ts  tracks.ts
ui/src/lib/components/: Button.svelte  Modal.svelte  PlayableTrackArt.svelte  PreviewableTrackDetails.svelte
ui/src/lib/components/contextMenu/: ContextMenu.svelte  ContextMenuItem.svelte  ContextMenuItem.ts  Ellipsis.svelte
ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
ui/src/routes/auth/: +page.js
ui/src/routes/discover/: +page.svelte  Tile.svelte
ui/src/routes/login/: +page.js
ui/src/routes/logout/: +page.svelte
(+27 files in other folders)
