[tool.poetry]
name = "aws"
version = "0.1.0"
description = ""
authors = ["Aaron Mamparo <aaronmamparo@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
aws-cdk-lib = "^2.146.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
