[tool.poetry]
name = "discoverify-api"
version = "0.0.1"
description = ""
authors = ["Aaron Mamparo <aaronmamparo@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-cors = "^4.0.1"
injector = "^0.21.0"
flask-injector = "^0.15.0"
requests = "^2.32.2"
aws-wsgi = "^0.2.7"
pyhumps = "^3.8.0"
dacite = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
